--- a/donate.html
+++ b/donate.html
@@ -397,7 +397,7 @@
                         <p id="u1225-5">I spend a lot of time trying to make sure that the things I build are useful, and the ultimate proof of that for me is that you actually want to use them. But, I’m an independent designer, without a regular income, so every little contribution helps cover my costs and lets me spend more time building things for people like you to enjoy.</p>
                         <p id="u1225-6">&nbsp;</p>
                         <p>&nbsp;</p>
-                        <p><span id="u1225-8">PayPal address:</span> <a class="nonblock" href="https://www.paypal.me/milenak" target="_blank"><span class="Pink-Link" id="u1225-10">www.paypal.me/milenak</span></a>
+                        <p><span id="u1225-8">PayPal address:</span> <a class="nonblock" href="https://www.paypal.me/milenak" target="_blank" rel="nofollow noopener noreferrer"><span class="Pink-Link" id="u1225-10">www.paypal.me/milenak</span></a>
                         </p>
                         <p>&nbsp;</p>
                         <p><span id="u1225-14">PayPal button:</span><span id="u1225-15"></span>
@@ -426,42 +426,42 @@
                     <!-- custom html -->
                     <ul class="social-icons">
                         <li>
-                            <a href="https://www.facebook.com/milenarussianprincess" title="Facebook" target="blank">
+                            <a href="https://www.facebook.com/milenarussianprincess" title="Facebook" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/facebook.png" alt="Facebook">
                             </a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/@milavakiseleva" title="Twitter" target="blank">
+                            <a href="https://twitter.com/@milavakiseleva" title="Twitter" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/twitter.png" alt="Twitter">
                             </a>
                         </li>
                         <li>
-                            <a href="http://instagram.com/milava_kiseleva" title="Instagram" target="blank">
+                            <a href="http://instagram.com/milava_kiseleva" title="Instagram" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/instagram.png" alt="Instagram">
                             </a>
                         </li>
                         <li>
-                            <a href="https://plus.google.com/+MilenaKiseleva" title="google-plus" target="blank">
+                            <a href="https://plus.google.com/+MilenaKiseleva" title="google-plus" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/google-plus.png" alt="Google+">
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.youtube.com/channel/UCoFqkP2lock02zAHuyLLXyg" title="YouTube" target="blank">
+                            <a href="https://www.youtube.com/channel/UCoFqkP2lock02zAHuyLLXyg" title="YouTube" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/youtube.png" alt="YouTube">
                             </a>
                         </li>
                         <li>
-                            <a href="http://milenakiseleva.blogspot.ru" title="Blogger" target="blank">
+                            <a href="http://milenakiseleva.blogspot.ru" title="Blogger" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/blogger.png" alt="Blogger">
                             </a>
                         </li>
                         <li>
-                            <a href="http://www.linkedin.com/in/milenakiseleva" title="Linkedin" target="blank">
+                            <a href="http://www.linkedin.com/in/milenakiseleva" title="Linkedin" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/linkedin.png" alt="Linkedin">
                             </a>
                         </li>
                         <li>
-                            <a href="https://github.com/MilenaKiseleva" title="Github" target="blank">
+                            <a href="https://github.com/MilenaKiseleva" title="Github" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/github.png" alt="Github">
                             </a>
                         </li>
