--- a/portfolio.html
+++ b/portfolio.html
@@ -438,42 +438,42 @@
                     <!-- custom html -->
                     <ul class="social-icons">
                         <li>
-                            <a href="https://www.facebook.com/milenarussianprincess" title="Facebook" target="blank">
+                            <a href="https://www.facebook.com/milenarussianprincess" title="Facebook" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/facebook.png" alt="Facebook">
                             </a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/@milavakiseleva" title="Twitter" target="blank">
+                            <a href="https://twitter.com/@milavakiseleva" title="Twitter" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/twitter.png" alt="Twitter">
                             </a>
                         </li>
                         <li>
-                            <a href="http://instagram.com/milava_kiseleva" title="Instagram" target="blank">
+                            <a href="http://instagram.com/milava_kiseleva" title="Instagram" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/instagram.png" alt="Instagram">
                             </a>
                         </li>
                         <li>
-                            <a href="https://plus.google.com/+MilenaKiseleva" title="google-plus" target="blank">
+                            <a href="https://plus.google.com/+MilenaKiseleva" title="google-plus" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/google-plus.png" alt="Google+">
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.youtube.com/channel/UCoFqkP2lock02zAHuyLLXyg" title="YouTube" target="blank">
+                            <a href="https://www.youtube.com/channel/UCoFqkP2lock02zAHuyLLXyg" title="YouTube" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/youtube.png" alt="YouTube">
                             </a>
                         </li>
                         <li>
-                            <a href="http://milenakiseleva.blogspot.ru" title="Blogger" target="blank">
+                            <a href="http://milenakiseleva.blogspot.ru" title="Blogger" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/blogger.png" alt="Blogger">
                             </a>
                         </li>
                         <li>
-                            <a href="http://www.linkedin.com/in/milenakiseleva" title="Linkedin" target="blank">
+                            <a href="http://www.linkedin.com/in/milenakiseleva" title="Linkedin" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/linkedin.png" alt="Linkedin">
                             </a>
                         </li>
                         <li>
-                            <a href="https://github.com/MilenaKiseleva" title="Github" target="blank">
+                            <a href="https://github.com/MilenaKiseleva" title="Github" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/github.png" alt="Github">
                             </a>
                         </li>
@@ -527,105 +527,105 @@
             </div>
             <div class="clearfix colelem" id="pu5379-4">
                 <!-- group -->
-                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5379-4" href="https://www.iconfinder.com/iconsets/liner-multimedia-buttons?ref=MilenaKiseleva" target="_blank">
+                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5379-4" href="https://www.iconfinder.com/iconsets/liner-multimedia-buttons?ref=MilenaKiseleva" target="_blank" rel="nofollow noopener noreferrer">
                     <!-- content -->
                     <p id="u5379-2">Liner Multimedia Buttons&nbsp; in Circle</p>
                 </a>
-                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5371-4" href="https://www.iconfinder.com/iconsets/different-genders?ref=MilenaKiseleva" target="_blank">
+                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5371-4" href="https://www.iconfinder.com/iconsets/different-genders?ref=MilenaKiseleva" target="_blank" rel="nofollow noopener noreferrer">
                     <!-- content -->
                     <p id="u5371-2">Different Genders v1</p>
                 </a>
-                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5363-4" href="https://www.iconfinder.com/iconsets/weather-liner?ref=MilenaKiseleva" target="_blank">
+                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5363-4" href="https://www.iconfinder.com/iconsets/weather-liner?ref=MilenaKiseleva" target="_blank" rel="nofollow noopener noreferrer">
                     <!-- content -->
                     <p id="u5363-2">Weather Liner</p>
                 </a>
             </div>
             <div class="clearfix colelem" id="pu5355-4">
                 <!-- group -->
-                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5355-4" href="https://www.iconfinder.com/iconsets/weather-colored-liner?ref=MilenaKiseleva" target="_blank">
+                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5355-4" href="https://www.iconfinder.com/iconsets/weather-colored-liner?ref=MilenaKiseleva" target="_blank" rel="nofollow noopener noreferrer">
                     <!-- content -->
                     <p id="u5355-2">Weather Colored Liner</p>
                 </a>
-                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5347-4" href="https://www.iconfinder.com/iconsets/ice-cream-3?ref=MilenaKiseleva" target="_blank">
+                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5347-4" href="https://www.iconfinder.com/iconsets/ice-cream-3?ref=MilenaKiseleva" target="_blank" rel="nofollow noopener noreferrer">
                     <!-- content -->
                     <p id="u5347-2">Ice Cream</p>
                 </a>
-                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5339-4" href="https://www.iconfinder.com/iconsets/snowflakes-liner?ref=MilenaKiseleva" target="_blank">
+                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5339-4" href="https://www.iconfinder.com/iconsets/snowflakes-liner?ref=MilenaKiseleva" target="_blank" rel="nofollow noopener noreferrer">
                     <!-- content -->
                     <p id="u5339-2">Snowflakes Black Liner</p>
                 </a>
             </div>
             <div class="clearfix colelem" id="pu5318-4">
                 <!-- group -->
-                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5318-4" href="https://www.iconfinder.com/iconsets/snowflakes-coloured-liner?ref=MilenaKiseleva" target="_blank">
+                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5318-4" href="https://www.iconfinder.com/iconsets/snowflakes-coloured-liner?ref=MilenaKiseleva" target="_blank" rel="nofollow noopener noreferrer">
                     <!-- content -->
                     <p id="u5318-2">Snowflakes Colored Liner</p>
                 </a>
-                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5387-4" href="https://www.iconfinder.com/iconsets/christmas-tree-ball-with-snowflakes?ref=MilenaKiseleva" target="_blank">
+                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5387-4" href="https://www.iconfinder.com/iconsets/christmas-tree-ball-with-snowflakes?ref=MilenaKiseleva" target="_blank" rel="nofollow noopener noreferrer">
                     <!-- content -->
                     <p id="u5387-2">Christmas tree ball with snowflakes</p>
                 </a>
-                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5398-4" href="https://www.iconfinder.com/iconsets/we-are-different-v2?ref=MilenaKiseleva" target="_blank">
+                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5398-4" href="https://www.iconfinder.com/iconsets/we-are-different-v2?ref=MilenaKiseleva" target="_blank" rel="nofollow noopener noreferrer">
                     <!-- content -->
                     <p id="u5398-2">We are Different v2</p>
                 </a>
             </div>
             <div class="clearfix colelem" id="pu5409-4">
                 <!-- group -->
-                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5409-4" href="https://www.iconfinder.com/iconsets/we-are-different-v1-1?ref=MilenaKiseleva" target="_blank">
+                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5409-4" href="https://www.iconfinder.com/iconsets/we-are-different-v1-1?ref=MilenaKiseleva" target="_blank" rel="nofollow noopener noreferrer">
                     <!-- content -->
                     <p id="u5409-2">We are Different v1</p>
                 </a>
-                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5412-4" href="https://www.iconfinder.com/iconsets/easter-14?ref=MilenaKiseleva" target="_blank">
+                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5412-4" href="https://www.iconfinder.com/iconsets/easter-14?ref=MilenaKiseleva" target="_blank" rel="nofollow noopener noreferrer">
                     <!-- content -->
                     <p id="u5412-2">Easter</p>
                 </a>
-                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5415-4" href="https://www.iconfinder.com/iconsets/easter-eggs-7?ref=MilenaKiseleva" target="_blank">
+                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5415-4" href="https://www.iconfinder.com/iconsets/easter-eggs-7?ref=MilenaKiseleva" target="_blank" rel="nofollow noopener noreferrer">
                     <!-- content -->
                     <p id="u5415-2">Easter Eggs v1</p>
                 </a>
             </div>
             <div class="clearfix colelem" id="pu5450-4">
                 <!-- group -->
-                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5450-4" href="https://www.iconfinder.com/iconsets/easter-eggs-v2-1?ref=MilenaKiseleva" target="_blank">
+                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5450-4" href="https://www.iconfinder.com/iconsets/easter-eggs-v2-1?ref=MilenaKiseleva" target="_blank" rel="nofollow noopener noreferrer">
                     <!-- content -->
                     <p id="u5450-2">Easter Eggs v2</p>
                 </a>
-                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5527-4" href="https://www.iconfinder.com/iconsets/birthday-5?ref=MilenaKiseleva" target="_blank">
+                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5527-4" href="https://www.iconfinder.com/iconsets/birthday-5?ref=MilenaKiseleva" target="_blank" rel="nofollow noopener noreferrer">
                     <!-- content -->
                     <p id="u5527-2">Birthday</p>
                 </a>
-                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5461-4" href="https://www.iconfinder.com/iconsets/travel-69?ref=MilenaKiseleva" target="_blank">
+                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5461-4" href="https://www.iconfinder.com/iconsets/travel-69?ref=MilenaKiseleva" target="_blank" rel="nofollow noopener noreferrer">
                     <!-- content -->
                     <p id="u5461-2">Travel</p>
                 </a>
             </div>
             <div class="clearfix colelem" id="pu5464-4">
                 <!-- group -->
-                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5464-4" href="https://www.iconfinder.com/iconsets/liner-multimedia-buttons-1?ref=MilenaKiseleva" target="_blank">
+                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5464-4" href="https://www.iconfinder.com/iconsets/liner-multimedia-buttons-1?ref=MilenaKiseleva" target="_blank" rel="nofollow noopener noreferrer">
                     <!-- content -->
                     <p id="u5464-2">Liner Multimedia Buttons</p>
                 </a>
-                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5483-4" href="https://www.iconfinder.com/iconsets/leafs?ref=MilenaKiseleva" target="_blank">
+                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5483-4" href="https://www.iconfinder.com/iconsets/leafs?ref=MilenaKiseleva" target="_blank" rel="nofollow noopener noreferrer">
                     <!-- content -->
                     <p id="u5483-2">Autumn Leafs</p>
                 </a>
-                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5486-4" href="https://www.iconfinder.com/iconsets/leafs-1?ref=MilenaKiseleva" target="_blank">
+                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5486-4" href="https://www.iconfinder.com/iconsets/leafs-1?ref=MilenaKiseleva" target="_blank" rel="nofollow noopener noreferrer">
                     <!-- content -->
                     <p id="u5486-2">Leafs</p>
                 </a>
             </div>
             <div class="clearfix colelem" id="pu5489-4">
                 <!-- group -->
-                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5489-4" href="https://www.iconfinder.com/iconsets/leafs-black-liner?ref=MilenaKiseleva" target="_blank">
+                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5489-4" href="https://www.iconfinder.com/iconsets/leafs-black-liner?ref=MilenaKiseleva" target="_blank" rel="nofollow noopener noreferrer">
                     <!-- content -->
                     <p id="u5489-2">Leafs Black Liner</p>
                 </a>
-                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5516-4" href="https://www.iconfinder.com/iconsets/social-life?ref=MilenaKiseleva" target="_blank">
+                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5516-4" href="https://www.iconfinder.com/iconsets/social-life?ref=MilenaKiseleva" target="_blank" rel="nofollow noopener noreferrer">
                     <!-- content -->
                     <p id="u5516-2">Social Life</p>
                 </a>
-                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5633-4" href="https://www.iconfinder.com/iconsets/green-energy-9?ref=MilenaKiseleva" target="_blank">
+                <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u5633-4" href="https://www.iconfinder.com/iconsets/green-energy-9?ref=MilenaKiseleva" target="_blank" rel="nofollow noopener noreferrer">
                     <!-- content -->
                     <p id="u5633-2">Green Energy</p>
                 </a>
