--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -416,7 +416,7 @@
                         <p id="u1250-18">&nbsp;</p>
                         <p id="u1250-20">Advertisement and Other Third Parties</p>
                         <p id="u1250-21">&nbsp;</p>
-                        <p id="u1250-26">Advertising partners and other third parties may use cookies, scripts and/or web beacons to track visitors activities on this website in order to display advertisements and other useful information. Such tracking is done directly by the third parties through their own servers and is subject to their own privacy policies. This website has no access or control over these cookies, scripts and/or web beacons that may be used by third parties. Learn how to <a class="nonblock" href="http://www.google.com/privacy_ads.html" target="_blank"><span id="u1250-23">opt out of Google’s cookie usage</span></a>.</p>
+                        <p id="u1250-26">Advertising partners and other third parties may use cookies, scripts and/or web beacons to track visitors activities on this website in order to display advertisements and other useful information. Such tracking is done directly by the third parties through their own servers and is subject to their own privacy policies. This website has no access or control over these cookies, scripts and/or web beacons that may be used by third parties. Learn how to <a class="nonblock" href="http://www.google.com/privacy_ads.html" target="_blank" rel="nofollow noopener noreferrer"><span id="u1250-23">opt out of Google’s cookie usage</span></a>.</p>
                         <p id="u1250-27">&nbsp;</p>
                         <p id="u1250-28">&nbsp;</p>
                         <p id="u1250-30">Links to Third Party Websites</p>
@@ -438,7 +438,7 @@
                         <p id="u1250-52">&nbsp;</p>
                         <p id="u1250-54">Contact Information</p>
                         <p id="u1250-55">&nbsp;</p>
-                        <p id="u1250-60">For any questions or concerns regarding the privacy policy, please send me an email to <a class="nonblock" href="mailto:milavakiseleva@gmail.com"><span id="u1250-57">milavakiseleva@gmail.com</span></a>.</p>
+                        <p id="u1250-60">For any questions or concerns regarding the privacy policy, please send me an email to <a class="nonblock" href="mailto:milavakiseleva@gmail.com" target="_blank" rel="nofollow noopener noreferrer"><span id="u1250-57">milavakiseleva@gmail.com</span></a>.</p>
                         <p id="u1250-61">&nbsp;</p>
                     </div>
                 </div>
@@ -446,42 +446,42 @@
                     <!-- custom html -->
                     <ul class="social-icons">
                         <li>
-                            <a href="https://www.facebook.com/milenarussianprincess" title="Facebook" target="blank">
+                            <a href="https://www.facebook.com/milenarussianprincess" title="Facebook" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/facebook.png" alt="Facebook">
                             </a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/@milavakiseleva" title="Twitter" target="blank">
+                            <a href="https://twitter.com/@milavakiseleva" title="Twitter" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/twitter.png" alt="Twitter">
                             </a>
                         </li>
                         <li>
-                            <a href="http://instagram.com/milava_kiseleva" title="Instagram" target="blank">
+                            <a href="http://instagram.com/milava_kiseleva" title="Instagram" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/instagram.png" alt="Instagram">
                             </a>
                         </li>
                         <li>
-                            <a href="https://plus.google.com/+MilenaKiseleva" title="google-plus" target="blank">
+                            <a href="https://plus.google.com/+MilenaKiseleva" title="google-plus" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/google-plus.png" alt="Google+">
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.youtube.com/channel/UCoFqkP2lock02zAHuyLLXyg" title="YouTube" target="blank">
+                            <a href="https://www.youtube.com/channel/UCoFqkP2lock02zAHuyLLXyg" title="YouTube" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/youtube.png" alt="YouTube">
                             </a>
                         </li>
                         <li>
-                            <a href="http://milenakiseleva.blogspot.ru" title="Blogger" target="blank">
+                            <a href="http://milenakiseleva.blogspot.ru" title="Blogger" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/blogger.png" alt="Blogger">
                             </a>
                         </li>
                         <li>
-                            <a href="http://www.linkedin.com/in/milenakiseleva" title="Linkedin" target="blank">
+                            <a href="http://www.linkedin.com/in/milenakiseleva" title="Linkedin" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/linkedin.png" alt="Linkedin">
                             </a>
                         </li>
                         <li>
-                            <a href="https://github.com/MilenaKiseleva" title="Github" target="blank">
+                            <a href="https://github.com/MilenaKiseleva" title="Github" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/github.png" alt="Github">
                             </a>
                         </li>
