Content edit: URL's updated

--- a/portfolio.html
+++ b/portfolio.html
@@ -463,7 +463,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="http://milenakiseleva.blogspot.ru" title="Blogger" target="_blank" rel="nofollow noopener noreferrer">
+                            <a href="https://milenakiseleva.blogspot.com" title="Blogger" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/blogger.png" alt="Blogger">
                             </a>
                         </li>
