--- a/about-me.html
+++ b/about-me.html
@@ -456,7 +456,7 @@
                                 </div>
                                 <div class="clearfix grpelem" id="u3400-7">
                                     <!-- content -->
-                                    <p><span id="u3400">Blog:</span><span id="u3400-2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span><a class="nonblock" href="http://milenakiseleva.blogspot.ru" target="_blank" rel="nofollow noopener noreferrer"><span class="Pink-Link" id="u3400-3">http://milenakiseleva.blogspot.ru</span></a>
+                                    <p><span id="u3400">Blog:</span><span id="u3400-2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span><a class="nonblock" href="https://milenakiseleva.blogspot.com" target="_blank" rel="nofollow noopener noreferrer"><span class="Pink-Link" id="u3400-3">https://milenakiseleva.blogspot.com</span></a>
                                     </p>
                                 </div>
                             </div>
@@ -503,7 +503,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="http://milenakiseleva.blogspot.ru" title="Blogger" target="_blank" rel="nofollow noopener noreferrer">
+                            <a href="https://milenakiseleva.blogspot.com" title="Blogger" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/blogger.png" alt="Blogger">
                             </a>
                         </li>
