Content edit: URL's updated

--- a/portfolio.html
+++ b/portfolio.html
@@ -404,21 +404,21 @@
                     </div>
                     <div class="clearfix colelem" id="pu3750">
                         <!-- group -->
-                        <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u3750" href="javascript:popUpWindow('http://milenakiseleva.github.io/website-milenakiseleva.blogspot.com.html','Website','700','600')">
+                        <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u3750" href="javascript:popUpWindow('https://milenakiseleva.com/website-milenakiseleva.blogspot.com.html','Website','700','600')">
                             <!-- group -->
                             <div class="clearfix grpelem" id="u4546-4">
                                 <!-- content -->
                                 <p id="u4546-2">Milena Kiseleva - Blog</p>
                             </div>
                         </a>
-                        <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u3749" href="javascript:popUpWindow('http://milenakiseleva.github.io/website-milenarussianprincess.tk.html','Website','700','600')">
+                        <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u3749" href="javascript:popUpWindow('https://milenakiseleva.com/website-milenarussianprincess.tk.html','Website','700','600')">
                             <!-- group -->
                             <div class="clearfix grpelem" id="u4549-4">
                                 <!-- content -->
                                 <p id="u4549-2">Milena Russian Princess</p>
                             </div>
                         </a>
-                        <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u4349" href="javascript:popUpWindow('http://milenakiseleva.github.io/website-milenakiseleva.github.io.html','Website','700','600')">
+                        <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u4349" href="javascript:popUpWindow('https://milenakiseleva.com/website-milenakiseleva.github.io.html','Website','700','600')">
                             <!-- group -->
                             <div class="clearfix grpelem" id="u4552-4">
                                 <!-- content -->
@@ -426,7 +426,7 @@
                             </div>
                         </a>
                     </div>
-                    <a class="nonblock nontext shadow museBGSize clearfix colelem" id="u3748" href="javascript:popUpWindow('http://milenakiseleva.github.io/website-karolinaray.tk.html','Website','700','600')">
+                    <a class="nonblock nontext shadow museBGSize clearfix colelem" id="u3748" href="javascript:popUpWindow('https://milenakiseleva.com/website-karolinaray.tk.html','Website','700','600')">
                         <!-- group -->
                         <div class="clearfix grpelem" id="u4555-4">
                             <!-- content -->
