--- a/website-karolinaray.tk.html
+++ b/website-karolinaray.tk.html
@@ -39,7 +39,7 @@
             <div class="clearfix colelem" id="u1721-7">
                 <!-- content -->
                 <p id="u1721-2">Karolina Ray</p>
-                <p id="u1721-5"><a class="nonblock" href="javascript:popUpWindow('http://milenakiseleva.github.io/website-karolinaray.html','Website','700','600')" target="_blank" title="Go to this website"><span class="White-Link">www.karolinaray.tk</span></a>
+                <p id="u1721-5"><a class="nonblock" href="javascript:popUpWindow('https://milenakiseleva.com/website-karolinaray.html','Website','700','600')" target="_blank" title="Go to this website"><span class="White-Link">www.karolinaray.tk</span></a>
                 </p>
             </div>
             <div class="clearfix colelem" id="u1781-6">
