--- a/website-milenakiseleva.blogspot.com.html
+++ b/website-milenakiseleva.blogspot.com.html
@@ -38,7 +38,7 @@
         <div class="clearfix colelem" id="u1684-7">
             <!-- content -->
             <p id="u1684-2">Milena Kiseleva</p>
-            <p id="u1684-5"><a class="nonblock" href="javascript:popUpWindow('http://milenakiseleva.github.io/website-milenakiseleva.blogspot.com.html','Website','700','600')" target="_blank" title="Go to this website"><span class="White-Link">milenakiseleva.blogspot.com</span></a>
+            <p id="u1684-5"><a class="nonblock" href="javascript:popUpWindow('https://milenakiseleva.com/website-milenakiseleva.blogspot.com.html','Website','700','600')" target="_blank" title="Go to this website"><span class="White-Link">milenakiseleva.blogspot.com</span></a>
             </p>
         </div>
         <div class="clearfix colelem" id="u1777-6">
