--- a/website-milenakiseleva.github.io.html
+++ b/website-milenakiseleva.github.io.html
@@ -39,7 +39,7 @@
             <div class="clearfix colelem" id="u1670-7">
                 <!-- content -->
                 <p id="u1670-2">Milena Kiseleva</p>
-                <p id="u1670-5"><a class="nonblock" href="javascript:popUpWindow('http://milenakiseleva.github.io/website-milenakiseleva.github.io.html','Website','700','600')" target="_blank" title="Go to this website"><span class="White-Link">milenakiseleva.github.io</span></a>
+                <p id="u1670-5"><a class="nonblock" href="javascript:popUpWindow('https://milenakiseleva.com/website-milenakiseleva.github.io.html','Website','700','600')" target="_blank" title="Go to this website"><span class="White-Link">milenakiseleva.github.io</span></a>
                 </p>
             </div>
             <div class="clearfix colelem" id="u1770-6">
