Content edit: Page renamed and URL updated

--- a/portfolio.html
+++ b/portfolio.html
@@ -418,7 +418,7 @@
                                 <p id="u4549-2">Milena Russian Princess</p>
                             </div>
                         </a>
-                        <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u4349" href="javascript:popUpWindow('https://milenakiseleva.com/website-milenakiseleva.github.io.html','Website','700','600')">
+                        <a class="nonblock nontext shadow museBGSize clearfix grpelem" id="u4349" href="javascript:popUpWindow('https://milenakiseleva.com/website-milenakiseleva.com.html','Website','700','600')">
                             <!-- group -->
                             <div class="clearfix grpelem" id="u4552-4">
                                 <!-- content -->
