--- a/website-milenakiseleva.com.html
+++ b/website-milenakiseleva.com.html
@@ -15,7 +15,7 @@
             "outOfDate": []
         };
     </script>
-    <title>website-milenakiseleva.github.io</title>
+    <title>website-milenakiseleva.com</title>
     <!-- CSS -->
     <link rel="stylesheet" href="css/site_global.css?crc=73000521">
     <link rel="stylesheet" href="css/website-milenakiseleva_github_io.css?crc=7774945" id="pagesheet">
@@ -39,7 +39,7 @@
             <div class="clearfix colelem" id="u1670-7">
                 <!-- content -->
                 <p id="u1670-2">Milena Kiseleva</p>
-                <p id="u1670-5"><a class="nonblock" href="javascript:popUpWindow('https://milenakiseleva.com/website-milenakiseleva.github.io.html','Website','700','600')" target="_blank" title="Go to this website"><span class="White-Link">milenakiseleva.github.io</span></a>
+                <p id="u1670-5"><a class="nonblock" href="javascript:popUpWindow('https://milenakiseleva.com/website-milenakiseleva.com.html','Website','700','600')" target="_blank" title="Go to this website"><span class="White-Link">milenakiseleva.github.io</span></a>
                 </p>
             </div>
             <div class="clearfix colelem" id="u1770-6">
