Fix: Old URLs replaced with new ones

--- a/donate.html
+++ b/donate.html
@@ -436,7 +436,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="http://instagram.com/milava_kiseleva" title="Instagram" target="_blank" rel="nofollow noopener noreferrer">
+                            <a href="https://www.instagram.com/milava_kiseleva/" title="Instagram" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/instagram.png" alt="Instagram">
                             </a>
                         </li>
