Fix: Old URLs replaced with new ones

--- a/contact-thanks.html
+++ b/contact-thanks.html
@@ -421,7 +421,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="http://www.linkedin.com/in/milenakiseleva" title="Linkedin" target="_blank" rel="nofollow noopener noreferrer">
+                            <a href="https://www.linkedin.com/in/milenakiseleva/" title="Linkedin" target="_blank" rel="nofollow noopener noreferrer">
                                 <img src="https://milenakiseleva.com/social-media-icons/linkedin.png" alt="Linkedin">
                             </a>
                         </li>
