--- a/contact.html
+++ b/contact.html
@@ -396,7 +396,7 @@
                     </div>
                     <div class="colelem" id="u1221">
                         <!-- custom html -->
-                        <form id="contact-form" action="https://formspree.io/f/milavakiseleva@gmail.com" method="POST">
+                        <form id="contact-form" action="https://formspree.io/f/xpzoozko" method="POST">
                             <div class="field-left">
                                 <div class="form-title">Name:</div>
                                 <input type="text" name="name" placeholder="Enter your name" class="form-field">
